--- a/deploy_tools/gunicorn-upstart.template.conf
+++ b/deploy_tools/gunicorn-upstart.template.conf
@@ -11,5 +11,5 @@ chdir /home/charlie/sites/SITENAME/source
 
 script
   . bin/activate
-  guniorn --bind unix:/tmp/SITENAME.socket superlists.wsgi:application
+  gunicorn --bind unix:/tmp/SITENAME.socket superlists.wsgi:application
 end script
